let java check for file name or uri git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@18513 cec4b9c1-7d33-0410-9eda-942365e851bb